tests/error/effects_errors/return_impure_callable.err
Error: Type mismatch (at $FILE:9:10)
  | 
7 | @guppy
8 | def main() -> Callable[[int], int, []]:
9 |    return impure_func
  |           ^^^^^^^^^^^ Expected return value of type `int -[]-> int`, got `int ->
  |                       int`

Guppy compilation failed due to 1 previous error
